# protohackers

./: README.md
budget-chat/: Cargo.toml
budget-chat/src/: lib.rs  main copy.rs  main.rs  tokio-reference.rs
line-reversal/: Cargo.toml
line-reversal/src/: codec.rs  errors.rs  lib.rs  main.rs  message.rs  parser.rs  state.rs  types.rs
line-reversal/src/handlers/: ack.rs  connect.rs  data.rs  mod.rs
means-to-an-end/: Cargo.toml
means-to-an-end/src/: main.rs  main.rs.bkup
mob-in-the-middle/: Cargo.toml
mob-in-the-middle/src/: main copy.rs  main.rs
prime-time/: Cargo.toml
prime-time/src/: main.rs  main.rs.orig
smoke-test/: Cargo.toml  README.md
smoke-test/src/: .main.rs.swp  main.rs
speed-daemon/: Cargo.toml
speed-daemon-new/: Cargo.toml
speed-daemon-new/src/: codec.rs  lib.rs  main.rs
speed-daemon/src/: chatgpt_sample.rs  codec.rs  errors.rs  lib.rs  main.rs  message.rs  message_types.rs  parser.rs  parsers.rs  state.rs  types.rs
speed-daemon/src/handlers/: camera.rs  dispatcher.rs  error.rs  heartbeat.rs  mod.rs  plate.rs
unusual-database/: Cargo.toml
unusual-database/src/: main copy.rs  main.rs
