[package]
name = "budget-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["full"] }
