[package]
name = "line-reversal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
log = "0.4.17"
nom = "7.1.3"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["full"] }
