[package]
name = "mob-in-the-middle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.1"
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
