[package]
name = "speed-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
env_logger = "0.10.0"
log = "0.4.17"
nom = "7.1.3"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }
